--- a/android/AndroidReadCVSFile/app/src/main/res/layout/activity_plot.xml
+++ b/android/AndroidReadCVSFile/app/src/main/res/layout/activity_plot.xml
@@ -1,17 +1,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:ap="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.joon.androidreadcvsfile.SensorPlot">
 
-    <com.androidplot.xy.XYPlot
-        style="@style/APDefacto.Dark"
-        android:id="@+id/plot"
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_weight="1"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        ap:renderMode="use_background_thread"
-        ap:title="Frequency vs. Time"
-        ap:rangeTitle="phase"
-        ap:domainTitle="frequency"
-        ap:lineLabels="left|bottom"
-        ap:lineLabelRotationBottom="-45"/>
+        android:layout_height="wrap_content">
+
+        <com.androidplot.xy.XYPlot
+            android:id="@+id/phase-dip-plot"
+            style="@style/APDefacto.Dark"
+            android:layout_width="fill_parent"
+            android:layout_height="298dp"
+            android:layout_margin="0dp"
+            android:layout_marginLeft="10px"
+            android:layout_marginRight="10px"
+            android:layout_marginTop="10px"
+            android:layout_weight="1"
+            ap:domainTitle="Frequency"
+            ap:rangeTitle="Phase Dip"
+            ap:renderMode="use_background_thread"
+            ap:title="Frequency vs. Phase Dip" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart"
+            style="@style/APDefacto.Dark"
+            android:layout_width="match_parent"
+            android:layout_height="273dp" />
+
+        <!--<com.androidplot.xy.XYPlot-->
+            <!--style="@style/APDefacto.Dark"-->
+            <!--android:id="@+id/time-plot"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="fill_parent"-->
+            <!--android:layout_margin="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_marginTop="10px"-->
+            <!--android:layout_marginLeft="30dp"-->
+            <!--android:layout_marginRight="10px"-->
+            <!--android:layout_marginBottom="30dp"-->
+            <!--androidPlot.backgroundPaint.color="#000000"-->
+            <!--androidPlot.borderPaint.color="#000000"-->
+            <!--androidplot.renderMode="use_background_thread"-->
+            <!--ap:title="Time Domain"-->
+            <!--ap:domainTitle="Time"-->
+            <!--ap:rangeTitle="Frequency"/>-->
+
+    </LinearLayout>
 </LinearLayout>
